--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ol": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ol": "^0.1.12",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
     "rect": "^1.2.1"
