--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-ol": "^0.1.12",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
-    "rect": "^1.2.1"
+    "rect": "^1.2.1",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -37,6 +38,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-react-svg": "^0.2.0"
   }
 }
