--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@ant-design/charts": "^1.4.3",
+    "@ant-design/plots": "^2.1.3",
+    "@antv/g2": "^5.1.12",
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@galacean/effects": "^1.0.1",
     "antd": "^5.11.3",
