--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.3",
     "@ant-design/plots": "^2.1.3",
+    "@antv/g": "^5.18.23",
+    "@antv/g-canvas": "^1.11.25",
+    "@antv/g-plugin-3d": "^1.9.32",
+    "@antv/g-plugin-control": "^1.9.20",
+    "@antv/g-svg": "^1.10.24",
+    "@antv/g-webgl": "^1.9.35",
     "@antv/g2": "^5.1.12",
+    "@antv/g2-extension-3d": "^0.1.6",
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@galacean/effects": "^1.0.1",
     "antd": "^5.11.3",
@@ -41,6 +48,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "typescript": "^5.3.3",
     "vite": "^5.0.0",
     "vite-plugin-react-svg": "^0.2.0"
   }
