--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@antv/g2-extension-3d": "^0.1.6",
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@galacean/effects": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "antd": "^5.11.3",
     "axios": "^1.6.2",
     "babel-plugin-import": "^1.13.8",
