--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "antd": "^5.11.3",
     "axios": "^1.6.2",
     "babel-plugin-import": "^1.13.8",
+    "dayjs": "^1.11.10",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "lodash": "^4.17.21",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
     "ol": "^8.2.0",
@@ -44,6 +46,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "^7.23.5",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react-swc": "^3.5.0",
