--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "lodash": "^4.17.21",
+    "marked": "^11.1.1",
     "mobx": "^6.12.0",
     "mobx-react": "^9.1.0",
     "ol": "^8.2.0",
