modified:   package.json 	modified:   src/pages/services/ndvi-temp/map-container.tsx 	modified:   src/pages/services/rs-imagery/rs-imagery.tsx 	modified:   src/pages/services/services.tsx

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "type-check": "tsc",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "jest": {
     "preset": "ts-jest",
